nohup.out
0.0
0.0
19.9
29.9
0.0
29.9
0.0
59.8
0.0
0.0
10.0
0.0
10.0
0.0
59.9
19.9
0.0
0.0
29.9
0.0
0.0
0.0
0.0
Traceback (most recent call last):
  File "daemon.py", line 19, in <module>
    f.flush()
ValueError: I/O operation on closed file.
0.0
0.0
0.0
10.0
0.0
39.9
19.9
19.9
0.0
10.0
0.0
19.9
0.0
0.0
0.0
10.0
0.0
10.0
0.0
0.0
0.0
10.0
10.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
29.9
99.8
0.0
0.0
29.9
29.9
0.0
10.0
0.0
0.0
10.0
39.9
0.0
0.0
0.0
10.0
29.9
19.9
0.0
0.0
19.9
0.0
0.0
10.0
10.0
0.0
10.0
0.0
0.0
19.9
0.0
0.0
0.0
19.9
39.8
Traceback (most recent call last):
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_common.py", line 340, in wrapper
    ret = self._cache[fun]
AttributeError: _cache

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_pslinux.py", line 1517, in wrapper
    return fun(self, *args, **kwargs)
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_common.py", line 343, in wrapper
    return fun(self)
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_pslinux.py", line 1559, in _parse_stat_file
    with open_binary("%s/%s/stat" % (self._procfs_path, self.pid)) as f:
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_common.py", line 604, in open_binary
    return open(fname, "rb", **kwargs)
FileNotFoundError: [Errno 2] No such file or directory: '/proc/24563/stat'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "daemon.py", line 12, in <module>
    if p.memory_percent() > 5 or p.cpu_percent(0.1) > 5:
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/__init__.py", line 1107, in cpu_percent
    pt2 = self._proc.cpu_times()
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_pslinux.py", line 1517, in wrapper
    return fun(self, *args, **kwargs)
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_pslinux.py", line 1710, in cpu_times
    values = self._parse_stat_file()
  File "/home/javier/anaconda3/lib/python3.7/site-packages/psutil/_pslinux.py", line 1524, in wrapper
    raise NoSuchProcess(self.pid, self._name)
psutil.NoSuchProcess: psutil.NoSuchProcess process no longer exists (pid=24563)
19.9
10.0
39.8
0.0
10.0
0.0
0.0
  File "daemon.py", line 20
    f.close()
    ^
SyntaxError: invalid syntax
  File "daemon.py", line 21
    except
         ^
SyntaxError: invalid syntax
0.0
10.0
0.0
10.0
10.0
10.0
29.9
0.0
10.0
0.0
19.9
10.0
10.0
0.0
0.0
0.0
9.9
19.9
0.0
0.0
10.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
10.0
10.0
0.0
219.5
0.0
0.0
10.0
0.0
0.0
0.0
39.9
10.0
0.0
0.0
0.0
0.0
49.9
0.0
0.0
0.0
0.0
0.0
0.0
219.6
10.0
19.9
189.7
29.9
0.0
0.0
0.0
0.0
0.0
19.9
0.0
0.0
0.0
49.8
0.0
9.9
9.9
10.0
10.0
0.0
0.0
0.0
0.0
0.0
9.9
0.0
0.0
0.0
10.0
0.0
29.9
10.0
10.0
0.0
0.0
0.0
20.0
0.0
0.0
119.7
0.0
19.9
0.0
109.8
0.0
10.0
0.0
129.7
0.0
10.0
0.0
